<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_frame_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".ui.MainHostActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_collapseMode="pin"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_detail_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="485dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

        </androidx.recyclerview.widget.RecyclerView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="196dp" />

        <TextView
            android:id="@+id/fragment_detail_surface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/surface"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/fragment_detail_surface_imageview"
            app:layout_constraintTop_toBottomOf="@+id/fragment_detail_recyclerview" />

        <TextView
            android:id="@+id/fragment_detail_surface_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/number"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/fragment_detail_surface_imageview"
            app:layout_constraintTop_toBottomOf="@+id/fragment_detail_surface" />

        <ImageView
            android:id="@+id/fragment_detail_surface_imageview"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/surface"
            android:src="@drawable/ic_baseline_crop_16_9_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_detail_recyclerview" />

        <ImageView
            android:id="@+id/fragment_detail_room_imageview"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/number_of_rooms"
            android:src="@drawable/ic_baseline_home_24"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/fragment_detail_recyclerview" />

        <ImageView
            android:id="@+id/fragment_detail_bedrooms_imageview"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/bedrooms"
            android:src="@drawable/ic_baseline_single_bed_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_detail_surface_imageview" />

        <ImageView
            android:id="@+id/fragment_detail_bathroom_imageview"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/bathroom"
            android:src="@drawable/ic_baseline_bathtub_24"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/fragment_detail_room_imageview" />

        <ImageView
            android:id="@+id/fragment_location_imageview"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/address"
            android:src="@drawable/ic_baseline_location_on_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_detail_bathroom_imageview" />

        <TextView
            android:id="@+id/fragment_detail_rooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/number_of_rooms"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/fragment_detail_room_imageview"
            app:layout_constraintTop_toBottomOf="@+id/fragment_detail_recyclerview" />

        <TextView
            android:id="@+id/fragment_detail_rooms_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/number"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/fragment_detail_room_imageview"
            app:layout_constraintTop_toBottomOf="@+id/fragment_detail_rooms" />

        <TextView
            android:id="@+id/fragment_detail_bedrooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:text="@string/bedrooms"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/fragment_detail_bedrooms_imageview"
            app:layout_constraintTop_toBottomOf="@+id/fragment_detail_surface_value" />

        <TextView
            android:id="@+id/fragment_detail_bedrooms_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/number"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/fragment_detail_bedrooms_imageview"
            app:layout_constraintTop_toBottomOf="@+id/fragment_detail_bedrooms" />

        <TextView
            android:id="@+id/fragment_detail_bathrooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:text="@string/bathroom"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/fragment_detail_bathroom_imageview"
            app:layout_constraintTop_toBottomOf="@+id/fragment_detail_rooms_value" />

        <TextView
            android:id="@+id/fragment_detail_bathrooms_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/number"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/fragment_detail_bathroom_imageview"
            app:layout_constraintTop_toBottomOf="@+id/fragment_detail_bathrooms" />


        <TextView
            android:id="@+id/fragment_detail_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:text="@string/location"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/fragment_location_imageview"
            app:layout_constraintTop_toBottomOf="@+id/fragment_detail_bedrooms_value" />

        <TextView
            android:id="@+id/fragment_detail_address_value"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/address_detail"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/fragment_detail_scroller_id"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toEndOf="@+id/fragment_location_imageview"
            app:layout_constraintTop_toBottomOf="@+id/fragment_detail_location" />

        <ScrollView
            android:id="@+id/fragment_detail_scroller_id"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:fillViewport="true"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_detail_minimaps">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment_detail_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/description"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fragment_detail_description_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/description_detail"
                    android:textAlignment="viewStart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_detail_description" />

                <TextView
                    android:id="@+id/fragment_detail_agent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/agent"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fragment_detail_agent_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/agent_name" />

                <TextView
                    android:id="@+id/fragment_detail_date_of_entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/sale_date"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fragment_detail_date_of_entry_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/sale_date_value" />

            </LinearLayout>

        </ScrollView>

        <ImageView
            android:id="@+id/fragment_detail_minimaps"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:scaleType="centerCrop"
            android:src="@android:drawable/ic_dialog_map"
            app:layout_constraintBottom_toTopOf="@+id/fragment_detail_scroller_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.434"
            app:layout_constraintStart_toEndOf="@+id/fragment_detail_address_value"
            app:layout_constraintTop_toBottomOf="@+id/fragment_detail_bathrooms_value"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>